--- a/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/DeskClock.apk/res/values-fi-rFI/strings.xml
@@ -4,19 +4,15 @@
   <string name="alarm_clock_more_setting">Lisäasetukset</string>
   <string name="channel_name_alarm">Hälytys</string>
   <string name="channel_name_timer">Ajastin</string>
-  <string name="dialog_message_agree">Hyväksyn</string>
-  <string name="dialog_message_for_contact_permission">Jotta syntymäpäivähälytyksiä voidaan käyttää, Kello tarvitsee yhteystietojen käyttöoikeuden. Hyväksytö?</string>
-  <string name="dialog_message_negative">En hyväksy</string>
-  <string name="dynamic_alarm_speech">Älykäs hälytys</string>
   <string name="edit_alarm">Muokkaa hälytystä</string>
-  <string name="module_download_cancel">Ei nyt</string>
-  <string name="module_download_data_msg">Jotta älykäs hälytys, luontoäänet ja syntymäpäivähälytykset voidaan ottaa käyttöön, Kello tarvitsee yhteystietojen käyttöoikeuden ja pääsyn internetiin. Sinun täytyy myös ladata ylimääräinen äänitiedosto. Käytetäänkö mobiilidataa ylimääräisen äänitiedoston lataamiseen?</string>
-  <string name="module_download_data_msg_golbal">Jotta älykäs hälytys ja luontoääniä voidaan käyttää, Kellon täytyy ladata ylimääräinen äänitiedosto. Käytetäänkö mobiilidataa ylimääräisen äänitiedoston lataamiseen?</string>
+  <string name="module_download_cancel">Ei kiitos</string>
+  <string name="module_download_data_msg">Kellon täytyy yhdistää internetiin ladatakseen äänitiedostoja (20 Mt) ympäristöääniä ja älyhälytyksiä varten. Käytät tällä hetkellä mobiilidataa. Hyväksytkö?</string>
+  <string name="module_download_data_msg_golbal">Kellon täytyy ladata äänitiedostoja (20 Mt) ympäristöääniä ja älyhälytyksiä varten. Käytät tällä hetkellä mobiilidataa. Hyväksytkö?</string>
   <string name="module_download_fail">Ylimääräistä äänitiedostoa ei voitu ladata</string>
-  <string name="module_download_msg">Jotta älykäs hälytys, luontoäänet ja syntymäpäivähälytykset voidaan ottaa käyttöön, Kello tarvitsee yhteystietojen käyttöoikeuden ja pääsyn internetiin. Sinun täytyy myös ladata ylimääräinen äänitiedosto. Sinun täytyy myös ladata ylimääräinen äänitiedosto. Hyväksytkö?</string>
-  <string name="module_download_msg_golbal">Jotta älykäs hälytys ja luontoäänet voidaan ottaa käyttöön, Kellon täytyy ladata ylimääräinen äänitiedosto. Hyväksytkö?</string>
+  <string name="module_download_msg">Kellon täytyy yhdistää internetiin ladatakseen äänitiedostoja ympäristöääniä ja älyhälytyksiä varten. Hyväksytkö?</string>
+  <string name="module_download_msg_golbal">Kellon täytyy ladata äänitiedostoja ympäristöääniä ja älyhälytyksiä varten. Hyväksytkö?</string>
   <string name="module_download_no_network">Verkkoyhteyttä ei voitu muodostaa. Tarkista verkkoasetuksesi ja yritä uudelleen.</string>
-  <string name="module_download_ok">Hyväksyn &amp; lataa</string>
+  <string name="module_download_ok">Hyväksyn</string>
   <string name="module_download_success">Ylimääräinen äänitiedosto ladattiin onnistuneesti</string>
   <string name="module_download_title">Ylimääräinen äänitiedosto vaaditaan</string>
   <string name="module_downloading">Ladataan ylimääräistä äänitiedostoa…</string>
@@ -95,7 +91,12 @@
   <string name="delete_timer_item_title">Poista ajastin</string>
   <string name="delete_timezone_title">Poista aikavyöhyke</string>
   <string name="dialog_confirm_abort">Hylkää muutokset?</string>
+  <string name="dialog_message_agree">Hyväksyn</string>
+  <string name="dialog_message_for_contact_permission">Jotta syntymäpäivähälytyksiä voidaan käyttää, Kello tarvitsee yhteystietojen käyttöoikeuden. Hyväksytö?</string>
+  <string name="dialog_message_negative">En hyväksy</string>
+  <string name="dialog_message_not_remind">"Don't show again"</string>
   <string name="done">Valmis</string>
+  <string name="dynamic_alarm_speech">Älykäs hälytys</string>
   <string name="edit_systemtime">Muokkaa järjestelmän aikaa</string>
   <string name="elapsed_time_format">+%s</string>
   <string name="every_day">Joka päivä</string>
