--- a/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiCamera.apk/res/values-fi-rFI/strings.xml
@@ -179,8 +179,8 @@ ja luo otoksen, jossa kaikki ovat parhaimmillaan."</string>
   <string name="hunt_dual_water_mark">Kaksoiskameran vesileima lisätään automaattisesti.</string>
   <string name="image_file_name_format">"'IMG'_yyyyMMdd_HHmmss"</string>
   <string name="install_confirmed">Asenna</string>
-  <string name="lens_dirty_detected_content">"Kamerasi linssi on likainen,
-puhdista kamerasi linssi parempia kuvia varten."</string>
+  <string name="lens_dirty_detected_content">"Näyttää siltä, että kamerasi linssi on likainen.
+Puhdista kamerasi linssi parempia kuvia varten."</string>
   <string name="lens_dirty_detected_title_back">Takakameran linssi on likainen</string>
   <string name="lens_dirty_detected_title_front">Etukameran linssi on likainen</string>
   <string name="message_snap_double_confirm">Äänenvoimakkuuspainikkeen pitkä painallus käynnistää tällä hetkellä NFC:n. Korvataanko tämä ominaisuus?</string>
