--- a/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/PersonalAssistant.apk/res/values-fi-rFI/strings.xml
@@ -293,12 +293,12 @@
   <string name="ball_basketball_rank_gb">Tulokset</string>
   <string name="ball_basketball_rank_state">Osavaltio</string>
   <string name="ball_basketball_title">Koripallo</string>
-  <string name="ball_basketball_total_rank">Tilastot</string>
   <string name="ball_dialog_confirm">Asenna</string>
   <string name="ball_dialog_content">Asenna %s käyttääksesi tätä ominaisuutta. Asennetaanko nyt?</string>
   <string name="ball_dialog_tip">Älä näytä uudelleen</string>
   <string name="ball_dialog_title">Asenna sovellus ensin.</string>
   <string name="ball_football_news">Uutiset</string>
+  <string name="ball_football_news_worldcup">Lisää uutisia</string>
   <string name="ball_football_rank_flat">D</string>
   <string name="ball_football_rank_lose">L</string>
   <string name="ball_football_rank_num">P</string>
@@ -309,10 +309,15 @@
   <string name="ball_football_recent">VS</string>
   <string name="ball_football_recent_end">Päättynyt</string>
   <string name="ball_football_recent_end_tip">Tulokset</string>
+  <string name="ball_football_recent_end_worldcup">Katso tulokset napauttamalla &gt;</string>
   <string name="ball_football_recent_ing">Kesken</string>
+  <string name="ball_football_recent_ing_worldcup">Katso livenä napauttamalla &gt;</string>
   <string name="ball_football_recent_text_show">Tekstiselostus</string>
+  <string name="ball_football_recent_text_show_youku">Live-lähetys</string>
   <string name="ball_football_title">Jalkapallo</string>
   <string name="ball_football_total_rank">Tilastot</string>
+  <string name="ball_football_total_rank_worldcup">Aikataulu</string>
+  <string name="ball_football_world_cup">World Cup</string>
   <string name="ball_hupu">HuPu</string>
   <string name="ball_net_errot">Verkkoyhteyttä ei voitu muodostaa.</string>
   <string name="ball_recent_no_data">Tulevista otteluista ei ole tietoja.</string>
@@ -509,6 +514,7 @@
   <string name="express_addressee_info">Vastaanottajan tiedot</string>
   <string name="express_addressee_name">Vastaanottajan nimi</string>
   <string name="express_addressee_region">Vastaanottajan alue</string>
+  <string name="express_auth_button_text">添加手机号</string>
   <string name="express_authorized">Sallittu</string>
   <string name="express_banner_header">%1$s / Seurantanumero</string>
   <string name="express_booking_txt">Tilaa pikatoimitus</string>
@@ -636,10 +642,12 @@ Tarkista seurantanumerosi."</string>
   <string name="express_sender_info">Lähettäjän tiedot</string>
   <string name="express_sender_name">Lähettäjän nimi</string>
   <string name="express_sender_region">Lähettäjän alue</string>
+  <string name="express_setting_add_new_number">添加新号码</string>
+  <string name="express_setting_add_other_number">其他号码</string>
   <string name="express_setting_authorized_number">Vahvistettu puhelinnumero</string>
   <string name="express_setting_authorized_number_add">Lisää</string>
   <string name="express_setting_authorized_number_delete">Poista</string>
-  <string name="express_setting_authorized_number_description">Tietosuojalausunto: Puhelinnumeroasi käytetään vain toimituksen tilan ja tietojen tarkistamiseen.</string>
+  <string name="express_setting_authorized_number_description">隐私声明：您同意我们将您的手机号码提供给服务提供商，仅用于为您查询和展示物流运单信息，不会用作其他用途。</string>
   <string name="express_setting_authorized_number_empty">Et ole vielä vahvistanut puhelinnumeroasi.</string>
   <string name="express_setting_authorized_number_limit">最多同时绑定4个手机号码</string>
   <string name="express_setting_brief">Seuraa pikalähetyksien pakettejasi</string>
@@ -647,7 +655,6 @@ Tarkista seurantanumerosi."</string>
   <string name="express_setting_cainiaoguoguo">菜鸟裹裹</string>
   <string name="express_setting_code_invalid">Varmista, että olet syöttänyt oikean koodin</string>
   <string name="express_setting_count_down_time">Yritä uudelleen %d s kuluttua</string>
-  <string name="express_setting_dialog_authority_description">Puhelinnumeron vahvistuksen tarjoaa Hakemistot. Hakemistot tarvitsee internetyhteyden toimiakseen normaalisti. Hyväksytäänkö?</string>
   <string name="express_setting_dialog_delete_cancel">Peruuta</string>
   <string name="express_setting_dialog_delete_description">Hakemistot ei voi seurata toimitustietoja automaattisesti puhelinnumeron poistamisen jälkeen. Poistetaanko siitä huolimatta?</string>
   <string name="express_setting_dialog_delete_failed">Puhelinnumeroa ei voitu poistaa</string>
@@ -655,16 +662,22 @@ Tarkista seurantanumerosi."</string>
   <string name="express_setting_dialog_delete_success">Poistettiin onnistuneesti</string>
   <string name="express_setting_dialog_delete_title">Poista puhelinnumero</string>
   <string name="express_setting_entrance_description">Vahvista puhelinnumerosi tarkistaaksesi tilaustiedot.</string>
+  <string name="express_setting_network_unavailable">无法连接网络，请检查网络设置</string>
   <string name="express_setting_number">Puhelinnumero</string>
   <string name="express_setting_number_already_add">手机号码已绑定，请尝试其他号码</string>
   <string name="express_setting_number_invalid">Varmista, että olet syöttänyt kelvollisen puhelinnumeron</string>
   <string name="express_setting_number_save">Vahvista ja tallenna</string>
   <string name="express_setting_number_title">Lisää puhelinnumero</string>
+  <string name="express_setting_numbers_already_authorized">已添加的号码</string>
+  <string name="express_setting_numbers_no_authorized">添加手机号</string>
+  <string name="express_setting_numbers_quick_authorized">可快速添加的号码</string>
   <string name="express_setting_phone">Salli tietojen pyyntö käyttämällä puhelinnumeroa</string>
   <string name="express_setting_request_failed">Pyyntöä ei voitu lähettää. Virhekoodi: %s.</string>
   <string name="express_setting_service_provider">Palveluntarjoaja</string>
-  <string name="express_setting_supported_orders">"现已支持：淘宝、天猫、闲鱼应用中的快递运单；中通，申通，韵达等主流快递公司的快递运单。
-暂不支持：部分非淘宝、天猫、闲鱼商家发货的顺丰快递运单（可手动添加运单号解决）；京东自派送运单。"</string>
+  <string name="express_setting_service_unavailable">抱歉，当前服务不可用，请稍后重试</string>
+  <string name="express_setting_sim_card_index">卡槽%d</string>
+  <string name="express_setting_supported_orders">"Tuetut toimitus- palvelut ovat Taobao, Tmall, Xianyu, ZTO Express, STO Express, Yunda Express ja muut suuret toimitusyritykset. 
+Useita tilauksia, jotka lähetetään SF Expressin kautta Taobaon, Tmallin ja Xianyun ulkopuolisilta toimittajilta, voidaan tarkistaa vain manuaalisesti."</string>
   <string name="express_setting_title">Vahvistettu puhelinnumero</string>
   <string name="express_setting_tracking_disable">Ei vahvistettu</string>
   <string name="express_setting_verification_code">Koodi</string>
@@ -1298,6 +1311,7 @@ Tarkista seurantanumerosi."</string>
   <string name="recharge_title_over">Meni rajan yli</string>
   <string name="recharge_title_remaining">Jäljellä oleva data</string>
   <string name="recharge_title_used">Käytetty tänään</string>
+  <string name="recommend_title">添加更多你感兴趣的卡片</string>
   <string name="record_name">Uusi nauhoitus</string>
   <string name="record_parent">Ääninauhuri</string>
   <string name="red_dowm_blue_grow">Vihreä - ylös, punainen -alas</string>
@@ -1338,6 +1352,7 @@ Tarkista seurantanumerosi."</string>
   <string name="setting_authorization_canceled_dialog_message">MIUI ei enää tallenna maksujasi ja tämä kortti poistetaan.</string>
   <string name="setting_authorization_canceled_dialog_ok">Poista kortti</string>
   <string name="setting_authorization_canceled_dialog_title">Poista kortti</string>
+  <string name="setting_ball_recent">Äskettäin lisätty</string>
   <string name="setting_basketball_brief_detail">Näytä tietoja, tuloksia ja seuraa enintään neljää koripallojoukkuetta.</string>
   <string name="setting_booking">Varaukset</string>
   <string name="setting_booking_brief">Juna, lentokone, elokuvaliput ja hotellivaraukset</string>
@@ -1393,6 +1408,14 @@ Tarkista seurantanumerosi."</string>
   <string name="setting_stock_brief_list">Päivittäinen tiedotus</string>
   <string name="setting_switch_toast_close">Maksuja ei tallenneta</string>
   <string name="setting_switch_toast_open">Maksut tallennetaan</string>
+  <string name="setting_world_cup_a">A组</string>
+  <string name="setting_world_cup_b">B组</string>
+  <string name="setting_world_cup_c">C组</string>
+  <string name="setting_world_cup_d">D组</string>
+  <string name="setting_world_cup_e">E组</string>
+  <string name="setting_world_cup_f">F组</string>
+  <string name="setting_world_cup_g">G组</string>
+  <string name="setting_world_cup_h">H组</string>
   <string name="settings">Asetukset</string>
   <string name="settings_subtitle">Vastaanota ilmoituksia, kun lisäät jotain suosikkeihin</string>
   <string name="settings_title">Ilmoita suosikkeihin lisäämisistä</string>
