--- a/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Contacts.apk/res/values-fi-rFI/strings.xml
@@ -252,7 +252,7 @@ Yhteystietokortit on poistettu käytöstä"</string>
   <string name="contact_editor_prompt_one_account">Uudet yhteystiedot tallennetaan tilille %1$s.</string>
   <string name="contact_editor_prompt_zero_accounts">Uutta kontaktiasi ei varmuuskopioida. Lisätäänkö tili, joka varmuuskopioi uudet kontaktit verkossa?</string>
   <string name="contact_import_methods_dialog_bluetooth">Bluetooth</string>
-  <string name="contact_import_methods_dialog_mi_mover">Mi Siirtäjä</string>
+  <string name="contact_import_methods_dialog_mi_mover">Mi Mover</string>
   <string name="contact_import_methods_dialog_title">Valitse tuontitapa</string>
   <string name="contact_is_readOnly">Vain-luku muodossa olevia yhteystietoja ei voida muokata</string>
   <string name="contact_list_loading">Ladataan…</string>
@@ -541,7 +541,7 @@ Syy: %s"</string>
   <string name="import_contact_card_aggregate_suggestion_button">Yhdistä kortit</string>
   <string name="import_contact_card_button">Tuo yhteystiedot</string>
   <string name="import_failure_no_vcard_file">Tallennustilasta ei löydy vCard-tiedostoja.</string>
-  <string name="import_from_onekey_migrate">Tuo käyttämällä Mi Siirtäjää</string>
+  <string name="import_from_onekey_migrate">Tuo käyttämällä Mi Moveria</string>
   <string name="import_from_other_device">Tuo toisesta laitteesta</string>
   <string name="import_from_sdcard">Tuo tallennustilalta</string>
   <string name="import_from_sim">Tuo SIM-kortilta</string>
